# toil-radar

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
tests/: test_basic.py
toil_radar/: __init__.py  cli.py  dashboard.py
toil_tracker/: CONTRIBUTING.md  cli.py  dashboard.py  pyproject.toml  toil_detector.py
toil_tracker/.github/workflows/: publish.yml
toil_tracker/tests/: test_basic.py
