[build-system]
requires = ["setuptools>=65", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toil-radar"
dynamic = ["version"]
description = "Detect, visualize, and reduce DevOps toil"
authors = [
    {name = "Amrut Pagidipally", email = "amrut.pagidipally@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["devops", "sre", "toil", "automation", "cli", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit>=1.29.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.urls]
Homepage = "https://github.com/amrutp24/toil-radar"
Repository = "https://github.com/amrutp24/toil-radar"
Issues = "https://github.com/amrutp24/toil-radar/issues"

[project.scripts]
toil-radar = "toil_radar.cli:main"
toil-dashboard = "toil_radar.dashboard:main"

[tool.setuptools.packages.find]
include = ["toil_radar*"]

[tool.setuptools_scm]
# version is derived from git tags automatically

[tool.pytest.ini_options]
testpaths = ["tests"]